@@ -198,7 +198,19 @@ specifier|static
 name|long
 name|WRITE_LOCK_TIMEOUT
 init|=
-literal|1000
+name|Integer
+operator|.
+name|parseInt
+argument_list|(
+name|System
+operator|.
+name|getProperty
+argument_list|(
+literal|"org.apache.lucene.writeLockTimeout"
+argument_list|,
+literal|"1000"
+argument_list|)
+argument_list|)
 decl_stmt|;
 DECL|field|COMMIT_LOCK_TIMEOUT
 specifier|public
@@ -206,7 +218,19 @@ specifier|static
 name|long
 name|COMMIT_LOCK_TIMEOUT
 init|=
-literal|10000
+name|Integer
+operator|.
+name|parseInt
+argument_list|(
+name|System
+operator|.
+name|getProperty
+argument_list|(
+literal|"org.apache.lucene.commitLockTimeout"
+argument_list|,
+literal|"10000"
+argument_list|)
+argument_list|)
 decl_stmt|;
 DECL|field|WRITE_LOCK_NAME
 specifier|public
@@ -225,6 +249,97 @@ name|String
 name|COMMIT_LOCK_NAME
 init|=
 literal|"commit.lock"
+decl_stmt|;
+DECL|field|DEFAULT_MERGE_FACTOR
+specifier|private
+specifier|static
+specifier|final
+name|int
+name|DEFAULT_MERGE_FACTOR
+init|=
+name|Integer
+operator|.
+name|parseInt
+argument_list|(
+name|System
+operator|.
+name|getProperty
+argument_list|(
+literal|"org.apache.lucene.mergeFactor"
+argument_list|,
+literal|"10"
+argument_list|)
+argument_list|)
+decl_stmt|;
+DECL|field|DEFAULT_MIN_MERGE_DOCS
+specifier|private
+specifier|static
+specifier|final
+name|int
+name|DEFAULT_MIN_MERGE_DOCS
+init|=
+name|Integer
+operator|.
+name|parseInt
+argument_list|(
+name|System
+operator|.
+name|getProperty
+argument_list|(
+literal|"org.apache.lucene.minMergeDocs"
+argument_list|,
+literal|"10"
+argument_list|)
+argument_list|)
+decl_stmt|;
+DECL|field|DEFAULT_MAX_FIELD_LENGTH
+specifier|private
+specifier|static
+specifier|final
+name|int
+name|DEFAULT_MAX_FIELD_LENGTH
+init|=
+name|Integer
+operator|.
+name|parseInt
+argument_list|(
+name|System
+operator|.
+name|getProperty
+argument_list|(
+literal|"org.apache.lucene.maxFieldLength"
+argument_list|,
+literal|"10000"
+argument_list|)
+argument_list|)
+decl_stmt|;
+DECL|field|DEFAULT_MAX_MERGE_DOCS
+specifier|private
+specifier|static
+specifier|final
+name|int
+name|DEFAULT_MAX_MERGE_DOCS
+init|=
+name|Integer
+operator|.
+name|parseInt
+argument_list|(
+name|System
+operator|.
+name|getProperty
+argument_list|(
+literal|"org.apache.lucene.maxMergeDocs"
+argument_list|,
+name|String
+operator|.
+name|valueOf
+argument_list|(
+name|Integer
+operator|.
+name|MAX_VALUE
+argument_list|)
+argument_list|)
+argument_list|)
 decl_stmt|;
 DECL|field|directory
 specifier|private
@@ -663,7 +778,7 @@ specifier|public
 name|int
 name|maxFieldLength
 init|=
-literal|10000
+name|DEFAULT_MAX_FIELD_LENGTH
 decl_stmt|;
 comment|/**    * Adds a document to this index.  If the document contains more than    * {@link #maxFieldLength} terms for a given field, the remainder are    * discarded.    */
 DECL|method|addDocument
@@ -787,7 +902,7 @@ specifier|public
 name|int
 name|mergeFactor
 init|=
-literal|10
+name|DEFAULT_MERGE_FACTOR
 decl_stmt|;
 comment|/** Determines the minimal number of documents required before the buffered    * in-memory documents are merging and a new Segment is created.    * Since Documents are merged in a {@link org.apache.lucene.store.RAMDirectory},    * large value gives faster indexing.  At the same time, mergeFactor limits    * the number of files open in a FSDirectory.    *    *<p> The default value is 10.*/
 DECL|field|minMergeDocs
@@ -795,7 +910,7 @@ specifier|public
 name|int
 name|minMergeDocs
 init|=
-literal|10
+name|DEFAULT_MIN_MERGE_DOCS
 decl_stmt|;
 comment|/** Determines the largest number of documents ever merged by addDocument().    * Small values (e.g., less than 10,000) are best for interactive indexing,    * as this limits the length of pauses while indexing to a few seconds.    * Larger values are best for batched indexing and speedier searches.    *    *<p>The default value is {@link Integer#MAX_VALUE}. */
 DECL|field|maxMergeDocs
@@ -803,9 +918,7 @@ specifier|public
 name|int
 name|maxMergeDocs
 init|=
-name|Integer
-operator|.
-name|MAX_VALUE
+name|DEFAULT_MAX_MERGE_DOCS
 decl_stmt|;
 comment|/** If non-null, information about merges will be printed to this. */
 DECL|field|infoStream
