@@ -61,6 +61,16 @@ $Id$
     strings: http://issues.apache.org/bugzilla/show_bug.cgi?id=24665
     (Jean-Francois Halleux via Otis)
 
+12. Added support for overriding default values for the following,
+    using system properties:
+      - default commit lock timeout
+      - default maxFieldLength
+      - default maxMergeDocs
+      - default mergeFactor
+      - default minMergeDocs
+      - default write lock timeout
+    (Otis)
+
 
 1.3 final
 
